--- a/WireGuard_aminiyt.html
+++ b/WireGuard_aminiyt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ari_pl4y</title>
+    <title>WireGuard_aminiyt</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,7 +59,7 @@
     </div>
 
     <div id="mainContent" style="display: none;">
-        <h2>ari_pl4y</h2>
+        <h2>WireGuard_aminiyt</h2>
         <div class="container">
             <button onclick="generateConfig()">تولید</button>
             <button onclick="copyToClipboard()">کپی کردن</button>
