--- a/WireGuard_aminiyt.html
+++ b/WireGuard_aminiyt.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="footer">
-            ساخته شده توسط <a href="https://t.me/asrnovin_ir" target="_blank">asrnovin_ir</a>
+            ساخته شده توسط <a href="https://t.me/dns_wairgard" target="_blank">asrnovin_ir</a>
         </div>
     </div>
 
